# try-cpp-winlin

./: .gitignore  CMakeLists.txt  README.md  exe  exe.bat  hello.cpp  locale.cpp  log.txt  mak.bat  po.cpp  termcols.cpp  termcols.h
